# MineC

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  motd.json
src/: connection.c  connection.h  main.c  mfile.c  mfile.h  mserver.c  mserver.h  mtypes.c  mtypes.h  packet.c  packet.h  protocol.h
src/handler/: handler.h  handshake_handler.c  login_handler.c  status_handler.c
